--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -26,3 +26,13 @@ html,body,#app {
 .el-cascader-panel {
   height: 150px;
 } 
+
+.el-steps{
+ margin: 15px 0;
+}
+.el-step__title{
+ size:13px;
+}
+.ql-editor {
+  min-height: 300px;
+}
